# mkdocs-terminal

./: .coveragerc  .gitignore  404.html  ADD_ACCESSIBILITY_TESTS_STATUS.md  AGENTS.md  CODE_OF_CONDUCT.md  COLOR_CONTRAST_TESTS.md  CONTRAST_REPORT_GENERATOR_SUMMARY.md  CONTRIBUTING.md  DEVELOPER_README.md  LICENSE  MANIFEST.in  Makefile  NOTES.md  PHASE_4_COMPLETE.md  PHASE_4_CRITICAL_FIX.md  README.md  SECURITY.md  babel.cfg  docker-compose.yml  en  hatch_build.py  index.html  mkdocs.yml  package-lock.json  package.json  pyproject.toml  requirements.dev.txt  requirements.test.txt  requirements.txt  scratch.html  search.html  sitemap.xml  tests.txt  theme_version.html  tox.ini
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/prompts/: openspec-archive.prompt.md  openspec-proposal.prompt.md
.github/workflows/: dependabot-prs.yml  dependabot.yml  meta.yml  pages-deploy-example-site.yml  pages-deploy.yml  publish.yml  reusable-pages-deploy.yml  test.yml
about/contributing/: index.html
about/coverage/: index.html
about/coverage-report/: d_23bf7247bda4ebb4_plugin_py.html  d_2583e640454d58aa___init___py.html  d_7e1d11d1cf628cf7___init___py.html  d_7e1d11d1cf628cf7_main_py.html  d_7e1d11d1cf628cf7_util_py.html  d_c926557d4617d0dd___init___py.html  index.html  status.json  z_36852f7dd625cad3_test_aria_py.html  z_a6fc1bd7ab88fd9b_theme_plugins_py.html  z_aee55b7cdf71401b_filters_py.html
about/debug/: index.html
about/license/: index.html
accessibility/: index.html
config/: index.html
configuration/: index.html
configuration/blocks/: index.html
configuration/code-highlighting/: index.html
configuration/extensions/: index.html
configuration/features/: index.html
configuration/palettes/: index.html
configuration/plugins/: index.html
css/: theme.tile_grid.css
css/palettes/: default.css  gruvbox_dark.css  sans_dark.css
demo/: Makefile  mkdocs.yml
demo/docs/: index.md  notes.md  section-index-notes.md
docs/: index.md
docs/about/: contributing.md  license.md
docs/user-guide/: configuration.md  deploying-your-docs.md  writing-your-docs.md
documentation/: Makefile  grid-example.yml  local.yml  mkdocs.yml  requirements.txt
documentation/context/: README.md
documentation/docs/: accessibility.md  config.md  index.md  install.md  releases.md  search.md
documentation/theme_overrides/: main.html
elements/blockquotes/: index.html
elements/buttons/: index.html
elements/code/: index.html
elements/definitions/: index.html
elements/details/: index.html
elements/examples/: index.html
elements/figure/: index.html
elements/footnotes/: index.html
elements/links/: index.html
elements/lists/: index.html
elements/table/: index.html
elements/tooltips/: index.html
elements/typography/: index.html
install/: index.html
js/mkdocs/: base.js
macros/: section-index-page-title.j2  side-nav-item-class.j2  tile-image.j2  tile-link.j2  toc.j2
macros/side-nav/: side-nav-item-class.j2
mkdocs/: __init__.py
navigation/section-indexes/: index.html
navigation/toc/: index.html
notes/: NOTES.md  tile.py  tile_grid.py  untested-py-mdown.md
notes/tile-grid-j2-macros/: tile.j2
openspec/: config.yaml  project.md
openspec/changes/: 2026-01-18-color-palette-toggle.md
releases/: index.html
search/: search_index.json
src/: mkdocs_theme.yml
src/css/: theme.css
src/partials/: side-nav-item.html
terminal/: 404.html  base.html  content.html  mkdocs_theme.yml  nav-macro.html  revision.html  side-nav-wip.html  side-nav.html  side-panel.html  theme_version.html  top-nav.html
terminal/css/: normalize.css  terminal.css  theme.css  (+2 more)
tests/: conftest.py  defaults.py  e2e_helper.py  integration_base.py  integration_helper.py  palette_report.md  palette_review.py  test_footer.py  test_grid.py  test_revision.py  test_search.py  test_simple.py  test_style.py  test_test_setup.py  test_tile.py  test_tile_image.py  test_tile_link.py  test_tile_link_start.py  test_top_nav.py  tile.py  xtest_top_nav_menu.py
tile-grid/: index.html
(+509 files in other folders)
